   Change the limit for the command line length when executing commands
   to a maximum of 32768 characters (closes #2979697).
   Fix broken opening URLs e.g. when using the 'builtin' Run command.
 * tagmanager/ctags.c:
   Change eFree() to simply ignore NULL pointers instead of asserting.
 * src/main.c:
   Remove malloc() fallback since we completely rely on g_malloc()
   nowadays.


2010-04-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/pluginutils.c, src/pluginutils.h, THANKS:
   Make plugin_signal_connect() string argument const (patch by
   Colomban Wendling, thanks).
 * src/keybindings.c, src/keybindings.h, src/plugindata.h:
   Constify some more string pointers in the API (patch by
   Colomban Wendling, thanks).
 * src/templates.c, src/templates.h, src/editor.c, doc/geany.txt,
   doc/geany.html:
   Support {pc} wildcard in snippets to escape percent char.
 * src/editor.c:
   Recalculate line margin width when zooming (fixes #2990553).
 * src/highlighting.c, doc/geany.txt, doc/geany.html,
   data/filetypes.common:
   Support more folding icon styles: arrows, +/- and no lines
   (#2935059).


2010-04-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/socket.c:
   Fix Windows build by properly guarding Unix-only code.


2010-04-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/templates.c, doc/geany.txt, doc/geany.html:
   Support {ob} and {cb} in fileheader and file templates; they are
   replaced last with { and }. This allows 'escaping' of wildcard
   strings.
 * src/editor.c, plugins/classbuilder.c:
   Fix Class Builder plugin to use correct indentation instead of
   always tabs.
   Make editor_insert_text_block() only replace leading tabs for the
   'Tabs' indent type; also group edits for undo.
 * src/templates.c, src/templates.h, src/editor.c, doc/geany.txt,
   doc/geany.html:
   Support {ob} and {cb} wildcards for snippets too (fixes #2937008).

